styles.css
:root {
  --color-rose-dark: #7a284e;
  --color-rose-light: #fff7fb;
  --color-stone-dark: #312e2c;
  --color-stone-mid: #5f564d;
  --color-stone-midlight: #e3ddd7;
  --color-stone-light: #f3e5d7;
  --color-brown: #854632;
  --color-white: #ffffff;
}

/* general  */

body {
  background-color: var(--color-stone-light);
  color: var(--color-stone-mid);
  font-family: "Outfit", Arial, Helvetica, sans-serif;
}

h1,
h2 {
  font-family: "Young Serif", Georgia, "Times New Roman", Times, serif;
  letter-spacing: 1px;
}

h2 {
  color: var(--color-brown);
  font-size: 1.75rem;
}

hr {
  background-color: var(--color-stone-mid);
  border-top: 1px solid var(--color-stone-midlight);
  margin: 32px auto;
}

.recipe {
  background-color: white;
  padding: 40px;
  max-width: 616px;
  margin: 128px auto;
  border-radius: 24px;
}

/* header  */

.recipe__image {
  width: 100%;
  max-width: 536px;
  height: auto;
  border-radius: 12px;
  display: block;
}

@media (max-width: 450px) {
  .recipe {
    margin-block: 0;
    border-radius: 0;
    padding: 0;
  }

  .recipe__image {
    border-radius: 0;
  }
}

.recipe__heading {
  color: var(--color-stone-dark);
  font-size: 2.5rem;
}

.recipe__description {
  font-size: 1rem;
  line-height: 1.5;
}

/* preparation  */

.recipe__preparation__heading {
  color: var(--color-rose-dark);
  font-size: 1.25rem;
  font-family: "Outfit";
}

.recipe__preparation {
  max-width: 536px;
  background-color: var(--color-rose-light);
  padding: 24px;
  border-radius: 12px;
}

.recipe__preparation__list li::marker {
  color: var(--color-rose-dark);
}

/* ingredients  */

.recipe__ingredients__list {
  margin: 0;
  padding: 0;
  margin-left: 22px;
}

.recipe__ingredients__list li::marker {
  color: var(--color-brown);
}

/* instructions  */

.recipe__instructions__list {
  margin: 0;
  padding: 0;
  margin-left: 22px;
}

.recipe__instructions__list li {
  padding-left: 10px;
}

.recipe__instructions__list li::marker {
  color: var(--color-brown);
  font-weight: 600;
}

/* nutrition  */

.recipe__nutrition__heading {
  margin: 0;
}

.recipe__nutrition__table {
  width: 100%;
}

.recipe__nutrition__table__caption {
  text-align: left;
  margin: 24px auto;
}

.recipe__nutrition__table__th {
  font-weight: 400;
}

.recipe__nutrition__table__td {
  font-weight: 600;
  font-size: 1.1rem;
  color: var(--color-brown);
}

.recipe__nutrition__table__td,
.recipe__nutrition__table__th {
  border-bottom: 1px solid var(--color-stone-midlight);
  padding: 10px 40px;
  text-align: left;
}

